$Id$

2020-10-15  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apacer SSDs (based on patch from #1202).
	- Crucial/Micron MX500 SSDs (FW <= M3CR032): Remove entry (#1227).
	- Crucial/Micron Client SSDs: Rename entry. Fix name of attribute 127.
	  This prevents false 'Currently unreadable (pending) sectors' warnings
	  from smartd (#1227, #1294, #1311, #1336).

	os_win32.cpp: Fix removal of trailing blanks.
	Silence misleading -Wstring-compare warning from g++ 10.2.0
	(GCC Bugzilla 97336).

2020-10-09  Christian Franke  <franke@computer.org>

	scsiprint.cpp: Don't print 'Accumulated power on time' if no
	option is specified (GH issues/65, regression from r5075).
	Fix setting of 'any_output' (regression from r4188).

	Based on patch from GH pull/66.

2020-10-06  Christian Franke  <franke@computer.org>

	Remove all occurrences of the throw() specifier.
	This specifier is deprecated since C++11.

2020-09-27  Christian Franke  <franke@computer.org>

	update-smart-drivedb.in: Add '--branch' option.
	Select signing key accordingly.
	update-smart-drivedb.8.in: Document new option.

2020-09-20  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 11/1300 SSDs: BX500 2TB,
	  1100 with version suffix (#1178), 1300 without prefix (#1369).
	- Micron 5100 Pro / 52x0 / 5300 SSDs: Add attribute 246.
	- Phison Driven SSDs: Kingston A400 M.2 (#1362),
	  Kingston OCP0S3* (#1370), Kingston OM8P0* (#1371).
	- Kingston SSDNow UV400/500: UV500 M.2 (#1347).
	- SAMSUNG SpinPoint N3U-3 (USB): Rename.
	- USB: Samsung S1 Mini (0x04e8:0x2f06) (Debian Bug 964032).

2020-09-19  Christian Franke  <franke@computer.org>

	ataprint.cpp: Report unavailable TRIM command only for SSDs.

2020-08-23  Christian Franke  <franke@computer.org>

	drivedb.h: DEFAULT entry: Limit attribute 231 (Temperature_Celsius)
	to HDDs.  Various SSDs use this attribute for a different purpose.

	drivedb.h:
	- Micron 5100 Pro / 52x0 / 5300 SSDs: Rename, add 5210 (#1356),